--- a/site/styles.css
+++ b/site/styles.css
@@ -1,13 +1,37 @@
-
-   span {
-    display : inline-block;
-    margin: 20px;
-    padding: 20px;
-   }
-   div {
-    /*display: inline;*/
-    border: 2px solid crimson;
-    margin: 20px;
-    padding: 20px;
-   }
+/*p.error{
+    color: red;
+}
   
+p.success{
+    color: darkgreen;
+    border: 2px green;
+}
+
+p.success.feed{
+    display: block;
+    border: solid 2px saddlebrown;
+}
+
+#content{
+    background-color: #ebebeb;
+    padding: 20px;
+}
+*/
+
+/*div .error{
+    color: purple;
+}
+*/
+
+a[href*="google"]{
+    background-color: aqua;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+a[href$=".ua"]{
+    color: white;
+    border: 2px solid blue;
+    background: red;
+}
