--- a/site/styles.css
+++ b/site/styles.css
@@ -23,7 +23,7 @@ p.success.feed{
 }
 */
 
-a[href*="google"]{
+/*a[href*="google"]{
     background-color: aqua;
     color: white;
     text-decoration: none;
@@ -34,4 +34,22 @@ a[href$=".ua"]{
     color: white;
     border: 2px solid blue;
     background: red;
+}
+*/
+
+div{
+    color: lightcoral;
+    border: 1px solid gray;
+    margin: 40px;
+    font-weight: bold;
+}
+
+p{
+    border: inherit;
+    margin: inherit;
+    color: black;
+}
+
+p{
+    color: aqua;
 }
